Criando animacaoes no tutorial sobre movimentacao do personagem

--- a/index.html
+++ b/index.html
@@ -16,7 +16,9 @@
       <div class="column is-full">
         <div class="notification is-primary">
           <img id="arrow-left" src="./img/arrow.png" alt="">
-          Move para a Esquerda
+          Move para a Esquerda          
+            <img class="img-boy" id="img-boy-left" src="img/boy.png" alt="Boy">              
+            
         </div>
       </div>
 
@@ -24,6 +26,7 @@
         <div class="notification is-primary">
           <img id="arrow-right" src="img/arrow.png" alt="">
           Move para a Direita
+          <img class="img-boy" id="img-boy-right" src="img/boy.png" alt="Boy">              
         </div>
       </div>
 
@@ -32,6 +35,7 @@
         <div class="notification is-primary">
           <img id="arrow-top" src="img/arrow.png" alt="">
           Move para Cima
+          <img class="img-boy" id="img-boy-up" src="img/boy.png" alt="Boy">              
         </div>
       </div>
 
@@ -39,7 +43,9 @@
         <div class="notification is-primary">
           <img id="arrow-bottom" src="img/arrow.png" alt="">
           Move para Baixo
+          <img class="img-boy" id="img-boy-down" src="img/boy.png" alt="Boy">              
         </div>
+
         <div class="box has-text-centered is-suc">
             <a class="button is-large is-success is-fullwidth">Começar o Jogo</a>
           </div>
