Inserindo icone do jogo, estilizando titulos da nav e bakground da nav

--- a/index.html
+++ b/index.html
@@ -7,14 +7,16 @@
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <title>Game game</title>
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/bulma/0.4.0/css/bulma.css" />
+  <link rel="icon" href="img/game-logo.png">
   <link rel="stylesheet" href="/css/styles.css">
 </head>
 
 <body>
-  <nav class="nav">
+  <nav  class="nav nav-background">
     <div class="nav-left">
       <a class="nav-item">
-        <img src="http://bulma.io/images/bulma-logo.png" alt="Bulma logo">
+        <img  class="img-logo" src="img/game-logo.png" alt="Bulma logo">
+        <h1 class="title-game">The Dot Hunt Game</h1>
       </a>
     </div>
   
